# esp32-time-weather

./: CMakeLists.txt  README.md
components/common_i2c/: CMakeLists.txt  common_i2c_init.c
components/common_i2c/include/: common_i2c_init.h
main/: CMakeLists.txt  main.c  sntp.c  wifi.c
main/include/: sntp.h  wifi.h
